--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jogo da Memória</title>
 
+    <!-- Importação do ícone da página -->
+    <link rel="shortcut icon" href="src/images/favicon.ico" type="image/x-icon">
+
     <!-- Importação de folhas de estilo -->
     <link rel="stylesheet" href="./src/styles/reset.css">
     <link rel="stylesheet" href="./src/styles/main.css">
